@@ -1,3 +1,13 @@
+2010-10-18  Pavel Podivilov  <podivilov@chromium.org>
+
+        Reviewed by Timothy Hatcher.
+
+        Web Inspector: disable private browsing for inspector
+        https://bugs.webkit.org/show_bug.cgi?id=47827
+
+        * WebCoreSupport/WebInspectorClient.mm:
+        (-[WebInspectorWindowController init]):
+
 2010-10-14  Ilya Tikhonovsky  <loislo@chromium.org>
 
         Reviewed by Pavel Feldman.
